# agent-platform

./: .clinerules  CUsersramsagitconfig.gitconfig  Dockerfile  agent_platform.db  docker-compose.yml  package-lock.json  package.json  pyproject.toml  setup.py
CUsersramsaDocumentsClineMCPrealtime-docs/: package-lock.json  package.json
agent_platform/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  FEATURES.md  README.md  ROADMAP.md  __init__.py  agent_platform.db  index.html  install_torch.bat  main.py  requirements.txt  script.js  setup.sh  start.bat  start.sh
agent_platform.egg-info/: PKG-INFO  SOURCES.txt
agent_platform/core/: __init__.py  agent_framework.py  auth.py  db_operations.py  test_monitor.py  utils.py
agent_platform/core/models/: __init__.py  agent.py  database.py  gamification.py  marketplace.py  user.py
agent_platform/core/tools/: api_tools.py  base.py  duckduckgo.py  voice_tools.py
agent_platform/docs/: api_documentation.md  documentation.md  user_authentication.md
agent_platform/frontend/: config-overrides.js  package-lock.json  package.json
agent_platform/frontend/src/: App.css  App.js
agent_platform/routes/: agent_routes.py  auth_routes.py
agent_platform/scripts/: agent_handler.py  seed_database.py  setup_supabase.py  setup_supabase.sql
agent_platform/scripts/migrations/: 0002_add_2fa_fields.py
agent_platform/tests/: conftest.py  test_agent_framework.py  test_api.py  test_api_endpoints.py  test_auth.py  test_e2e.py
profile_editor/: index.html  script.js
supabase/: config.toml
(+21 files in other folders)
